refactor: consolidate core library import paths and remove deprecated APIs
- Move from compat.bubbletea.bubbles.* to compat.bubbles.* imports
- Remove deprecated TextWrapper and ANSIColors shims
- Consolidate lipgloss component imports under unified paths
- Remove redundant cursor, help, and key binding imports
- Update internal API calls to use consolidated interfaces

This refactoring eliminates duplicate class definitions and provides
a cleaner, more consistent import structure across the core library.
Deprecated shims are marked for removal in future versions.