@@ -452,9 +452,9 @@ public class Progress implements Model {
 
     private void barView(StringBuilder b, double percent, int textWidth) {
         int tw = Math.max(0, width - textWidth);
-        int fw = (int) Math.round((double) tw * percent);
+        int fw = (int) Math.round(tw * percent);
 
-        fw = Math.max(0, Math.min(tw, fw));
+        fw = Math.clamp(fw, 0, tw);
 
         if (useRamp) {
             for (int i = 0; i < fw; i++) {
@@ -532,9 +532,9 @@ public class Progress implements Model {
         int gIdx = Math.round((float) g / 255 * 5);
         int bIdx = Math.round((float) b / 255 * 5);
 
-        rIdx = Math.min(5, Math.max(0, rIdx));
-        gIdx = Math.min(5, Math.max(0, gIdx));
-        bIdx = Math.min(5, Math.max(0, bIdx));
+        rIdx = Math.clamp(rIdx, 0, 5);
+        gIdx = Math.clamp(gIdx, 0, 5);
+        bIdx = Math.clamp(bIdx, 0, 5);
 
         return 16 + 36 * rIdx + 6 * gIdx + bIdx;
     }
@@ -543,7 +543,7 @@ public class Progress implements Model {
         if (!showPercentage) {
             return "";
         }
-        percent = Math.max(0, Math.min(1, percent));
+        percent = Math.clamp(percent, 0.0, 1.0);
         String percentage = String.format(percentFormat, percent * 100);
         if (percentageStyle != null) {
             percentage = percentageStyle.copy().inline(true).render(percentage);
@@ -582,7 +582,7 @@ public class Progress implements Model {
      * @return animation command
      */
     public Command setPercent(double p) {
-        this.targetPercent = Math.max(0, Math.min(1, p));
+        this.targetPercent = Math.clamp(p, 0.0, 1.0);
         this.tag++;
         return nextFrame();
     }
